--- a/report.Rmd
+++ b/report.Rmd
@@ -61,7 +61,7 @@ Loading and splitting the data (training, validating and testing):
 NA_STRINGS <- c("NA","#DIV/0!")
 training <- read.csv(TRAINING_FILE_PATH, na.strings = NA_STRINGS)
 testing <- read.csv(TESTING_FILE_PATH, na.strings = NA_STRINGS)
-in.training <- createDataPartition(y = training$class, p = 0.7, list = FALSE)
+in.training <- createDataPartition(y = training$classe, p = 0.7, list = FALSE)
 validating <- training[-in.training, ]
 training <- training[in.training, ]
 ```
@@ -70,7 +70,7 @@ How our original training dataset looks like:
 
 ```{r echo = TRUE}
 dim(training)
-print(table(training$class))
+print(table(training$classe))
 ```
 
 Checking the presence of NAs per variable:
@@ -89,8 +89,8 @@ na.stats
 A large number of variables have 95% or more of NAs values.
 These variables will be ignored on our models.
 
-We will always remove other variables that should not be related to the response,
-such as timestamp and the name of the atlet.
+We will also remove other variables that should not be related to the response,
+such as timestamps and the name of the atlet.
 
 ```{r echo = TRUE}
 unwanted.columns <- c("X", "raw_timestamp_part_1", "raw_timestamp_part_2", "cvtd_timestamp", "new_window", "num_window", "user_name")
@@ -119,7 +119,7 @@ dim(training)
 PCA:
 
 ```{r echo = TRUE}
-model.pca <- preProcess(training, method = "pca", thresh = 80/100)
+model.pca <- preProcess(training, method = "pca", thresh = 90/100)
 training.pcs <- predict(model.pca, training)
 validating.pcs <- predict(model.pca, validating)
 ```
@@ -141,9 +141,9 @@ model.gbm <- train(classe ~ ., method = "gbm", data = training.pcs, verbose = FA
 
 Accuracy of our models on the training dataset:
 
-```{r echo = TRUE}
-confusionMatrix(training.pcs$classe, predict(model.rf))$overall['Accuracy']
-confusionMatrix(training.pcs$classe, predict(model.gbm))$overall['Accuracy']
+```{r echo = FALSE}
+paste("Random Forest Accuracy =", confusionMatrix(training.pcs$classe, predict(model.rf))$overall['Accuracy'])
+paste("GBM Accuracy = ", confusionMatrix(training.pcs$classe, predict(model.gbm))$overall['Accuracy'])
 ```
 
 Now, checking the accuracy on the validation dataset:
@@ -151,11 +151,8 @@ Now, checking the accuracy on the validation dataset:
 ```{r echo = FALSE}
 validating.rf <- predict(model.rf, newdata = validating.pcs)
 validating.gbm <- predict(model.gbm, newdata = validating.pcs)
-```
-
-```{r echo = TRUE}
-confusionMatrix(validating.pcs$class, validating.rf)$overall['Accuracy']
-confusionMatrix(validating.pcs$class, validating.gbm)$overall['Accuracy']
+paste("Random Forest Accuracy =", confusionMatrix(validating.pcs$classe, validating.rf)$overall['Accuracy'])
+paste("GBM Accuracy = ", confusionMatrix(validating.pcs$classe, validating.gbm)$overall['Accuracy'])
 ```
 
 As the Random Forest model is already achieving a very high accuracy, no stacking/ensemble will be performed.
@@ -171,8 +168,6 @@ result
 # Conclusion
 
 We were able to build a very accurate model for our classification problem.
-
-Using PCA we were able to reduce the model to 12 variables (components).
 
 # Appendix
 
